# ChangeLog for sci-chemistry/balbes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/balbes/ChangeLog,v 1.11 2011/08/07 10:42:36 hwoarang Exp $

  07 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
  balbes-1.0.0_p100317-r2.ebuild:
  Stable on amd64 wrt bug #375903

  07 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  balbes-1.0.0_p100317-r2.ebuild:
  x86 stable wrt bug #375903

*balbes-1.0.0_p100317-r2 (23 Jul 2011)

  23 Jul 2011; Justin Lecher <jlec@gentoo.org>
  +files/pyxml-0.8.4-python-2.6.patch, -balbes-1.0.0_p100317-r1.ebuild,
  +balbes-1.0.0_p100317-r2.ebuild, metadata.xml:
  Fix for missing StripXml, #375903

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317-r1.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317-r1.ebuild:
  Added fortran-2.eclass support

  16 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  balbes-1.0.0_p100317-r1.ebuild:
  marked ~ppc wrt #303931

  16 Dec 2010; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317-r1.ebuild:
  Removal of fortran.eclass, #348851

*balbes-1.0.0_p100317-r1 (12 May 2010)

  12 May 2010; Justin Lecher <jlec@gentoo.org>
  -files/1.0.0_p100317-ldflags.patch, -balbes-1.0.0_p100317.ebuild,
  +files/1.0.0_p100317-makefile.patch, +balbes-1.0.0_p100317-r1.ebuild:
  Buildsystem fix, #319347

  22 Apr 2010; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317.ebuild:
  Fixes for Python ABIs

  28 Mar 2010; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317.ebuild:
  Keyworded for ~x86-linux ~amd64-linux

*balbes-1.0.0_p100317 (28 Mar 2010)

  28 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +files/1.0.0_p100317-ldflags.patch, +balbes-1.0.0_p100317.ebuild,
  +metadata.xml:
  New ebuild #309105
