@@ -1,27 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX 1.0.0_p100317-makefile.patch 5150 RMD160 c2f167b02a475543cec7fd67d95a0fff563dede3 SHA1 4139dcaf29c46eff7be3a3b3e9af253e97be8ce3 SHA256 e25ec095918f38c99972896a48db6a0b0b1df36ba0a7a337acae7aa9c46bbbda
-AUX pyxml-0.8.4-python-2.6.patch 1749 RMD160 f8eb2f581a953e8a2b2968cea9a88fe5a1353243 SHA1 787a92081dd172aa36d5c52344e74ef922073bc0 SHA256 03c4eb073c58e7c28a22ff702a296ba4c4fe11a64d931ada6216d1876c6118e8
-DIST balbes-1.0.0_p100317.tar.gz 506464 RMD160 5fbb018b33d539734b5421951178c62847f58acf SHA1 a6907d1762c12c63f71bfb9fbb9d601d4271cda6 SHA256 c5bf6c2086e1a3d7d380e5501c0cffdb91cbf77c74d2951dd345273f21921d0c
-DIST ccp4-6.1.3-core-src.tar.gz 242134076 RMD160 e9b7deb0766fb95d5e8946881f20e086f0896fe9 SHA1 ee5ada892694db5dc9b2d7d2330b4ac694f56580 SHA256 1e529c660e7f390ec0feca9d45caa00a2813d23156c10a2747c427117293c324
-EBUILD balbes-1.0.0_p100317-r2.ebuild 2195 RMD160 20f38b14555535cb63b8af1912f4c6ddbc2e1776 SHA1 befe6a34de77ed18faaf5481b81a7540c2821740 SHA256 3519df540d17ec6ab43bb020dc3cd6648f7218b5aaa2c3cca8aa86817b832397
-MISC ChangeLog 1834 RMD160 16d7f0ebd567dcc0f7fd6d13ce91c44d3d2abce7 SHA1 0a29b6b8e42cbb4b46125e30ed205c2c75fb3604 SHA256 2ff263ef12f4e1433b433f4a7c27a0790279f8e6ab9cf8cf7c0210875302db8f
-MISC metadata.xml 773 RMD160 55094bffdb9217dc73a9a7bfda9a57af5c797b58 SHA1 7b695d7c177eeb519e3ad58f1f4222e5f13fa29a SHA256 8decc10d9755c6134cd8f64bf4fbae5b5dd3c7bb04c5234dcbbf620a5e7bacc3
+AUX 1.0.0_p100317-makefile.patch 5150 SHA256 e25ec095918f38c99972896a48db6a0b0b1df36ba0a7a337acae7aa9c46bbbda SHA512 62ba59c0e3d271c83e28360a4d11edcdb23e6acbbb8c4cacb40d04e4916dc1350fc2a7e95257d95fb17507578bcec352b1bf708e4bc607205c775a0498a1121b WHIRLPOOL c20d7e5adcea9a4b8b125b12ebda53c3c8a79d2bb4237654f12e3697c0946ee62964974916d11dac1d744a80448877168dacaf990cdb742e918f2bed624bae52
+AUX pyxml-0.8.4-python-2.6.patch 1749 SHA256 03c4eb073c58e7c28a22ff702a296ba4c4fe11a64d931ada6216d1876c6118e8 SHA512 3c79b8d58da01bbfb1ac3d20106e9ed40b1e3c8d52abf216c764efc505a08ce37d1d06d282e7ba311f00f0839c4314d2664efa57228e6007ebf26ca5029f5a9d WHIRLPOOL e24c30aaae8d378cf66cd09b9e8d99971577e942ebb29facfc96bfb674050dcc04b39db80068f362f836376d797075b369fccb76bc00dfdb556a432168cd8551
+DIST balbes-1.0.0_p100317.tar.gz 506464 SHA256 c5bf6c2086e1a3d7d380e5501c0cffdb91cbf77c74d2951dd345273f21921d0c
+DIST ccp4-6.1.3-core-src.tar.gz 242134076 SHA256 1e529c660e7f390ec0feca9d45caa00a2813d23156c10a2747c427117293c324
+EBUILD balbes-1.0.0_p100317-r2.ebuild 2169 SHA256 b8b531026892422a2b4823b7380504f411686b66b8ca83a9298db1ab268f814a SHA512 6090e58702921c3374aa1c2ea959a734595d445783e321ec532c33de0d166b3b1d8e96587768c5c71c82ce06efbbd58e5c3cd3d0b210865f634275b4f78993ff WHIRLPOOL fca3434710a8c2a24ece8a046a220389ba1bf0f28bc5ad96e6d7eff92d8ae02a512f6f3cb846dac18337c6353482835219dcf1572e40c8a5f5cb917e22946e1d
+MISC ChangeLog 2015 SHA256 dc857d241fba7412b72181fb8d350c398e582cea3e22eed155b7c8cb5d812fe1 SHA512 b04900f8985e477b9777f4007e6fb1d079192de51bf6f954b21d9edc72d5f7218108c4ea0a6e889b95ab1183c1b0cebae1e959222bb8dd910951df52f4eaa37e WHIRLPOOL a5bc70f7c433913ef1798691c51a1beaf0dd75fca2bc2c958d4e15bb465153e15f1b179d44002e224718b94221ba5f1bdf90ba4e7bf1ac989a5c6fb7482f223c
+MISC metadata.xml 773 SHA256 8decc10d9755c6134cd8f64bf4fbae5b5dd3c7bb04c5234dcbbf620a5e7bacc3 SHA512 b5665849bf3b77bd44278b3eb63c556ad2194d1b3ce437736d053d391be7571442cc829f4ac204beca76521d9be8e504dc308e74b65010bfc3d27e930a33333e WHIRLPOOL d789f0a6ef3608b3dbf4a4c88fed061c434c48e3c8813c43b38b63c2dceb9e22d90fa52eb75f4b6037173c375db2af42c23d6aaa8c52a44e4db955bd85f20f24
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iQIcBAEBCgAGBQJOPmwBAAoJEPqDWhW0r/LChJQQAL1iLh/SXZW6tjKZaXyVEOPw
-4U6h+yHTW7JtWql4XyX0WvU9MzNfpPBMUZSL+7CaracBt4Fc/58MyXNSQGGrI2nP
-H9FsoY5aqgZQdMUZKTy06UsYY+g8JV7RUzpZDA3Rka7RNmGh9GdMM7S+l4a9NUqx
-MdlS40Ou7/S2/MCsAkonR9Pes4EzIVqpGveG2O3FWU0G81wnabr6PoMTiyQ7/Zmf
-voWcQj3GttuabUXTA1lIbbnNss/5YyvYhliq2c9+jqKyiBN9GezqjN31t+t8T1GB
-/SX3Z30B8M4sDSs5iCVx0ktrWUZVfXh0Y3pR1X0sz+9kcRZ6WrEpS2JO7igvDssQ
-fGGKn6hXs4Tj9u1bzaBagCwLDDzRh4I1LJIfqgBxO791qbaD5dzXt+KW6gKvBvhr
-MqL+E62zygBwWZ9/VG0HLUEurxJrmpw7nuL/69B1kvaBidEtpvng82QycZyBHgDn
-WYHRfxCUEGlQXyASfLjZpnUJY9a8d7V3NrVxj+GsPwBElxWJQslI+BCl1/HVeC0t
-zPhdB0yGu6XDCFBRGVUuDsaFQhHnHFaLk9cRS56+OQJk50cxZe40zUvy8JtpqxLF
-vxTpHfC13NHts6Tk1sEyYIV6R/JBADVf0ZQeawYo5wrAGyAzpU6lf/WscAzdXRTz
-E9mtG6g6+ChsDB8x0WKN
-=JlD2
+iEYEAREIAAYFAlCBH+gACgkQgAnW8HDreRZKlQCfUtRo6SfxnEiDY2zBfh2oHijq
+5VAAoJsDhpLf486YBuOXc2HQnjevvpu4
+=45jc
 -----END PGP SIGNATURE-----
