@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/balbes/balbes-1.0.0_p100317-r2.ebuild,v 1.3 2011/08/07 10:42:36 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/balbes/balbes-1.0.0_p100317-r2.ebuild,v 1.4 2012/10/19 09:39:51 jlec Exp $
 
 EAPI=3
 
@@ -16,18 +16,14 @@ SRC_URI="
 	ftp://ftp.ccp4.ac.uk/ccp4/${CCP4VER}/ccp4-${CCP4VER}-core-src.tar.gz"
 
 SLOT="0"
-KEYWORDS="amd64 ~ppc x86 ~amd64-linux ~x86-linux"
 LICENSE="ccp4"
+KEYWORDS="amd64 ~ppc x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 # bundled PyXML is modified and cannot be replaced
 
-COMMON_DEPEND="
-	sci-libs/ccp4-libs
-	virtual/fortran"
-
-RDEPEND="
-	${COMMON_DEPEND}
+COMMON_DEPEND="sci-libs/ccp4-libs"
+RDEPEND="${COMMON_DEPEND}
 	~sci-libs/balbes-db-${CCP4VER}
 	!<=sci-chemistry/ccp4-apps-6.1.3-r1"
 DEPEND="${COMMON_DEPEND}"
