@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/balbes
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/balbes/ChangeLog,v 1.11 2011/08/07 10:42:36 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/balbes/ChangeLog,v 1.12 2012/10/19 09:39:51 jlec Exp $
+
+  19 Oct 2012; Justin Lecher <jlec@gentoo.org> balbes-1.0.0_p100317-r2.ebuild:
+  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
+  updated fortran-2.eclass
 
   07 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
   balbes-1.0.0_p100317-r2.ebuild:
